# jacazul-ai-cli

./: .gitignore  .opencode.json  Dockerfile  Dockerfile.copilot  Dockerfile.fedora-43  Dockerfile.gemini  GEMINI.md  LICENSE  Makefile  README.md  TICKET.md  pyproject.toml
agents/: codana-copilot.md  codana-opencode.md  cortana-copilot.md
docs/: CLEANUP-REMINDER.md  README.md  copilot-cli-behavior.md  environment-modes.md  gemini-cli-directives.md  getting-started.md  interaction-modes.md  jit-forge-lifecycle.md  per-project-taskwarrior.md  python-expert.md  taskwarrior-expert.md  verification-methodology.md
docs/agents/: README.md  codana.md  cortana.md  jacazul.md  no-bullshit-policy.md  persona-switching.md  persona-system.md
docs/skills/: README.md
jacazul/cli/: flow.py  hatch.py  persona.py  ponder.py  pycheck.py  taskp.py
jacazul/hatch/: engine.py  persona.py
jacazul/taskwarrior/: core.py
sandbox/copilot/: .gitconfig
scripts/: can-copilot  can-gemini  can-gemini-sandboxed  can-opencode  configure  configure-direct  copilot  copilot-cli  copilot-direct  copilot-sandbox  copilot.backup  detect-os.sh  docker-entrypoint.sh  gemini-cli  init-venv.sh  jacazul-copilot  jacazul-gemini  jacazul-gemini-sandboxed  jacazul-opencode  migrate-project-prefix.sh  run_smoke.py  setup-fedora.sh  task
scripts/bootstrap/: copilot  environment  gemini  hatch  language  opencode  python  taskwarrior
scripts/direct/: setup-debian.sh  setup-fedora.sh
templates/: .taskrc
tests/: base.py  core_test.py  flow_test.py  test_hatch.py  test_switch.py
(+116 files in other folders)
