[project]
name = "jacazul-ai-cli"
version = "0.5.0"
description = "High-integrity AI CLI environment with Taskwarrior and Git integration"
authors = [{ name = "Flavio Garcia", email = "piraz@candango.org" }]
dependencies = [
    "orjson>=3.10.0",
    "tornado>=6.4.0",
    "ruff>=0.4.0",
    "pycodestyle>=2.11.0",
]
requires-python = ">=3.13"

[project.scripts]
tw-flow = "jacazul.cli.flow:main"
taskp = "jacazul.cli.taskp:main"
ponder = "jacazul.cli.ponder:main"
jacazul-hatch = "jacazul.cli.hatch:main"
jacazul-persona = "jacazul.cli.persona:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["jacazul"]
